# arcotech-kedro-starters

./: README.md
demo-template/: cookiecutter.json  prompts.yml
demo-template-blank/: README.md
demo-template-blank/{{ cookiecutter.repo_name }}/: README.md  mkdocs.yml  pyproject.toml
demo-template-blank/{{ cookiecutter.repo_name }}/.dvc/: config.local
demo-template-blank/{{ cookiecutter.repo_name }}/docs/: index.md
demo-template-pipe/{{ cookiecutter.repo_name }}/: .pre-commit-config.yml
demo-template/{{ cookiecutter.repo_name }}/: pyproject.toml
