[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.python_package }}"
description = "{{ cookiecutter.project_desc }}"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "arize>=7.36.0",
    "arize-otel>=0.8.0",
    "dvc-s3>=3.2.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.11",
    "pandas~=2.2.3",
    "polars~=1.27",
    "seaborn~=0.13.2",
    "ipython~=9.1.0",
    "jupyterlab~=4.4.0",
    "notebook~=7.4.0",
    "kedro[jupyter]~={{ cookiecutter.kedro_version }}",
    "kedro-datasets[pandas, matplotlib, polars] ~= 6.0.0",
    "kedro-viz>=6.7.0",
    "ipykernel~=6.29.5",
    "pre-commit~=4.2.0",
    "pytest-cov~=3.0",
    "pytest-mock~=3.14",
    "pytest~=8.3.5",
]

[project.scripts]
"{{ cookiecutter.repo_name }}" = "{{ cookiecutter.python_package }}.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.python_package }}.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "{{ cookiecutter.python_package }}"
project_name = "{{ cookiecutter.project_name }}"
kedro_init_version = "{{ cookiecutter.kedro_version }}"
tools = "{{ cookiecutter.tools | default('') | string | replace('\"', '\\\"') }}"
example_pipeline = "{{ cookiecutter.example_pipeline }}"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/{{ cookiecutter.python_package }} -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long
